Add quickstart highlights and troubleshooting docs

--- a/src/content/docs/cookbook-media-materials.mdx
+++ b/src/content/docs/cookbook-media-materials.mdx
@@ -258,7 +258,7 @@ sequenceDiagram
 > **Translation:** Complete
 > **Textures loaded:** 3/3
 >
-> ![Preview with textures](thumbnail.png)
+> Preview saved to `thumbnail.png` — download locally to confirm materials and textures applied correctly.
 
 ### Troubleshoot Missing Textures
 
