--- a/src/content/docs/cookbook-media-translation.mdx
+++ b/src/content/docs/cookbook-media-translation.mdx
@@ -261,7 +261,7 @@ sequenceDiagram
 >
 > [View in Browser](https://viewer.autodesk.com/...)
 >
-> ![Thumbnail](preview.png)
+> Preview saved to `preview.png` — open it locally or push to object storage for a quick visual check.
 
 ### Batch Translate
 
