Add all remaining changes and modifications

--- a/src/content/docs/interactive-shell.mdx
+++ b/src/content/docs/interactive-shell.mdx
@@ -1,9 +1,9 @@
 ---
 title: "Interactive Shell"
 description: "Use RAPS interactive shell with TAB completion and parameter hints"
-section: "getting-started"
-order: 5
-icon: "🚀"
+section: "modes"
+order: 3
+icon: "🐚"
 ---
 
 # Interactive Shell
