--- a/src/content/docs/introduction.mdx
+++ b/src/content/docs/introduction.mdx
@@ -19,6 +19,20 @@ icon: "📖"
 - **🤖 AI-Ready** — MCP server for AI assistant integration (v3.0.0+)
 - **📦 Single Binary** — No dependencies, easy installation
 
+## Usage Modes
+
+RAPS offers multiple ways to interact with APS — choose the mode that fits your workflow:
+
+| Mode | Description | Best For |
+|------|-------------|----------|
+| **[CLI](/docs/usage-modes#cli-mode)** | Standard command-line interface | Scripts, automation, CI/CD |
+| **[Interactive Shell](/docs/usage-modes#interactive-shell)** | REPL with TAB completion | Learning, exploration |
+| **[GitHub Actions](/docs/usage-modes#github-actions)** | Pre-built CI/CD action | GitHub workflows |
+| **[Docker](/docs/usage-modes#docker)** | Containerized RAPS | Isolated environments |
+| **[MCP Server](/docs/usage-modes#mcp-server)** | AI assistant integration | Claude, Cursor |
+
+📖 See [Usage Modes](/docs/usage-modes) for detailed comparison and setup guides.
+
 ## Core Features
 
 ### 🔐 Authentication
@@ -77,7 +91,8 @@ raps bucket list
 ## Next Steps
 
 1. **[Installation](/docs/installation)** — Get RAPS installed on your system
-2. **[Configuration](/docs/configuration)** — Set up your APS credentials
-3. **[Authentication](/docs/auth)** — Understand authentication options
-4. **[Your First Workflow](/docs/examples)** — Upload and translate a model
+2. **[Usage Modes](/docs/usage-modes)** — Choose how to use RAPS (CLI, Shell, Docker, etc.)
+3. **[Configuration](/docs/configuration)** — Set up your APS credentials
+4. **[Authentication](/docs/auth)** — Understand authentication options
+5. **[Your First Workflow](/docs/examples)** — Upload and translate a model
 
