--- a/src/content/blog/file-translation-disasters.mdx
+++ b/src/content/blog/file-translation-disasters.mdx
@@ -88,7 +88,7 @@ When a 3.4GB stadium model metadata file causes your Node.js script to crash wit
 RAPS solves these problems through systems-level engineering:
 
 **Memory-Efficient Processing**
-- **Streaming JSON parsing** handles 5GB+ files in <200MB RAM
+- **Streaming JSON parsing** handles 5GB+ files in under 200MB RAM
 - **Constant memory usage** regardless of file size
 - **14-second processing** of 3.4GB metadata (vs 4+ minutes before crashing in Node.js)
 - **Zero-copy operations** where possible
