Fix MDX parsing: escape asterisks in HTML content

--- a/src/content/docs/cookbook-mfg-batch.mdx
+++ b/src/content/docs/cookbook-mfg-batch.mdx
@@ -17,11 +17,11 @@ Process multiple CAD formats in bulk with parallel translation.
     <div class="border-2 border-blue-500/50 rounded-lg p-4 bg-blue-500/10">
       <div class="text-blue-400 font-semibold text-sm mb-3">CAD Directory</div>
       <div class="space-y-1 text-xs text-slate-300">
-        <div class="bg-slate-800 rounded px-2 py-1">*.iam</div>
-        <div class="bg-slate-800 rounded px-2 py-1">*.ipt</div>
-        <div class="bg-slate-800 rounded px-2 py-1">*.stp</div>
-        <div class="bg-slate-800 rounded px-2 py-1">*.igs</div>
-        <div class="bg-slate-800 rounded px-2 py-1">*.sldprt</div>
+        <div class="bg-slate-800 rounded px-2 py-1">\*.iam</div>
+        <div class="bg-slate-800 rounded px-2 py-1">\*.ipt</div>
+        <div class="bg-slate-800 rounded px-2 py-1">\*.stp</div>
+        <div class="bg-slate-800 rounded px-2 py-1">\*.igs</div>
+        <div class="bg-slate-800 rounded px-2 py-1">\*.sldprt</div>
       </div>
     </div>
     <div class="border-2 border-purple-500/50 rounded-lg p-4 bg-purple-500/10">
