--- a/src/content/docs/configuration.mdx
+++ b/src/content/docs/configuration.mdx
@@ -56,7 +56,7 @@ export APS_CLIENT_SECRET="your_client_secret_here"
 
 Create a `.env` file in your working directory:
 
-```env
+```ini
 APS_CLIENT_ID=your_client_id_here
 APS_CLIENT_SECRET=your_client_secret_here
 APS_CALLBACK_URL=http://localhost:8080/callback
