--- a/src/content/docs/mode-cli.mdx
+++ b/src/content/docs/mode-cli.mdx
@@ -175,7 +175,7 @@ export APS_REGION="US"                                    # Default region (US o
 
 Create a `.env` file in your working directory:
 
-```env
+```ini
 APS_CLIENT_ID=your_client_id
 APS_CLIENT_SECRET=your_client_secret
 APS_CALLBACK_URL=http://localhost:8080/callback
