--- a/src/content/docs/mode-docker.mdx
+++ b/src/content/docs/mode-docker.mdx
@@ -164,7 +164,7 @@ services:
 
 Use `.env` file for credentials:
 
-```env
+```ini
 # .env
 APS_CLIENT_ID=your_client_id
 APS_CLIENT_SECRET=your_client_secret
