Add interactive Manual Tax Calculator and cross-link it

--- a/src/content/blog/manual-tax.mdx
+++ b/src/content/blog/manual-tax.mdx
@@ -196,16 +196,27 @@ The tools exist. The APIs are mature. The patterns are proven from decades of so
 
 ### Calculate Your Manual Tax
 
-| Factor | Your Numbers |
-|--------|-------------|
-| Uploads per week | ___ |
-| Minutes per upload | 30-60 min |
-| Team members involved | ___ |
-| Hourly rate | $___ |
-| **Weekly cost** | = uploads × time × rate |
-| **Annual cost** | = weekly × 52 |
+Ready to see how much manual processes are costing you? Use our interactive calculator to reveal your potential savings.
 
-> **Example:** 10 uploads/week × 45 min × $75/hr × 52 weeks = **$29,250/year** in manual tax
+<div class="not-prose my-8">
+  <div class="p-8 bg-gradient-to-r from-rapeseed-500/10 to-amber-500/10 border border-rapeseed-500/20 rounded-2xl text-center">
+    <h4 class="text-2xl font-bold text-white mb-4">Manual Tax Calculator</h4>
+    <p class="text-slate-300 mb-6 max-w-lg mx-auto">
+      Input your team's specific numbers to find out your annual time loss and potential cost savings with APS automation.
+    </p>
+    <a 
+      href="/tools/manual-tax-calculator" 
+      class="inline-flex items-center gap-2 px-8 py-4 bg-rapeseed-500 hover:bg-rapeseed-400 text-slate-900 font-bold rounded-xl transition-all shadow-lg shadow-rapeseed-500/20 hover:scale-[1.02]"
+    >
+      Open Interactive Calculator
+      <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7l5 5m0 0l-5 5m5-5H6" />
+      </svg>
+    </a>
+  </div>
+</div>
+
+> **Example:** 10 uploads/week × 45 min × $75/hr × 52 weeks = **$29,250/year** in manual tax (excluding context switching!)
 
 ### Validated Savings
 
